enh(rows): fixed spacing on rows

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,7 @@ h1 {
   flex-direction: column; */
 }
 .row {
-
+  margin-left: 20px;
 }
 .row_posters {
   display: flex;
@@ -29,10 +29,20 @@ h1 {
 .row_poster {
   object-fit: contain;
   width: 100%;
-  max-height: 200px;
+  max-height: 150px;
   margin-right: 10px;
   transition: transform 250ms;
 }
 .row_poster:hover {
   transform: scale(1.08);
+}
+.row_posterLarge {
+  object-fit: contain;
+  width: 100%;
+  max-height: 300px;
+  margin-right: 10px;
+  transition: transform 250ms;
+}
+.row_posterLarge:hover {
+  transform: scale(1.09);
 }
